--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "npm: watch",
+            "label": "npm: watch plugin_rs",
             "type": "npm",
             "script": "watch",
             "problemMatcher": "$tsc-watch",
@@ -17,7 +17,7 @@
             }
         },
         {
-            "label": "npm: watch",
+            "label": "npm: watch plugin_ts",
             "type": "npm",
             "script": "watch",
             "problemMatcher": "$tsc-watch",
@@ -32,7 +32,7 @@
             }
         },
         {
-            "label": "npm: compile",
+            "label": "npm: compile plugin_rs",
             "type": "npm",
             "script": "compile",
             "path": "plugin_ts",
@@ -49,7 +49,7 @@
             }
         },
         {
-            "label": "npm: compile",
+            "label": "npm: compile plugin_ts",
             "type": "npm",
             "script": "compile",
             "path": "plugin_rs",
